# auto-git

./: .gitignore  Makefile  README.md  auto_git.py  newchanges.py  newfile.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
auto_git/: __init__.py  cli.py  config.py  ui.py  validation.py  watcher.py
auto_git/ai/: __init__.py  client.py  commits.py  prompts.py
auto_git/git/: __init__.py  core.py  diff.py  history.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_helpers.py
